--- a/Garden/Garden.css
+++ b/Garden/Garden.css
@@ -4,6 +4,12 @@ body {
   font-size: 12pt;
 }
 
+h1 {
+  font-size: 36pt;
+  text-align: center;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
 #choices {
   width: 25em;
   padding: 1em;
@@ -12,6 +18,10 @@ body {
   background-color: white;
   border: 1px black solid;
   border-radius: 0.25em;
+}
+
+#choices, #choices button {
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
 
 #choices li {
