--- a/Garden/Garden.css
+++ b/Garden/Garden.css
@@ -27,6 +27,11 @@ h1 {
 #choices li {
   list-style-type: none;
   text-align: center;
+  margin-bottom: 0.5em;
+}
+
+#choices li:last-child {
+  margin-bottom: 0;
 }
 
 #choices button {
