--- a/Garden/Garden.css
+++ b/Garden/Garden.css
@@ -10,7 +10,7 @@ h1 {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
-#choices {
+.choices {
   width: 25em;
   padding: 1em;
   margin-left: auto;
@@ -20,21 +20,21 @@ h1 {
   border-radius: 0.25em;
 }
 
-#choices, #choices button {
+.choices, .choices button {
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
 
-#choices li {
+.choices li {
   list-style-type: none;
   text-align: center;
   margin-bottom: 0.5em;
 }
 
-#choices li:last-child {
+.choices li:last-child {
   margin-bottom: 0;
 }
 
-#choices button {
+.choices button {
   background-color: #444;
   color: #ccc;
   font-family: Hoefler Text, Georgia, serif;
@@ -46,7 +46,7 @@ h1 {
   width: 100%;
 }
 
-#choices button:hover {
+.choices button:hover {
   color: #fff;
   background-color: #000;
 }
