--- a/Garden/Garden.css
+++ b/Garden/Garden.css
@@ -20,3 +20,9 @@ body {
   color: #fff;
   background-color: #000;
 }
+
+.choiceLetters {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 16pt;
+  font-weight: bold;
+}
